--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -10,7 +10,7 @@ on:
       - ".github/workflows/bench.yml"
 
 jobs:
-  benchscribe:
+  benchzribe:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,16 +29,16 @@ jobs:
           go test ./internal/benchmarks -bench=. -benchmem > ../bench.out
           cd ..
 
-      - name: Run benchscribe
+      - name: Run benchzribe
         run: |
-          go run cmd/benchscribe/main.go run
-          go run cmd/benchscribe/main.go graph
-          go run cmd/benchscribe/main.go readme
+          go run cmd/benchzribe/main.go run
+          go run cmd/benchzribe/main.go graph
+          go run cmd/benchzribe/main.go readme
 
       - name: Commit benchmark results
         run: |
-          git config user.name "benchscribe-bot"
-          git config user.email "bot@benchscribe.io"
+          git config user.name "benchzribe-bot"
+          git config user.email "bot@benchzribe.io"
           git add README.md bench/
           git commit -m "🧪 auto-update benchmark"
           git push || echo "Nothing to commit"
