--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,7 +6,6 @@ on:
       - main
     paths:
       - "**/*.go"
-      - "**/README.md"
       - ".github/workflows/bench.yml"
 
 jobs:
@@ -14,32 +13,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: ✅ Checkout code
         uses: actions/checkout@v3
         with:
           submodules: true
 
-      - name: Set up Go
+      - name: 🛠 Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
-      - name: Run mock API benchmark
+      - name: 🧪 Run Benchmark
         run: |
           cd mockapi
           go test ./internal/benchmarks -bench=. -benchmem > ../bench.out
           cd ..
 
-      - name: Run benchzribe (parser + readme update)
+      - name: 📦 Upload bench.out for debug (optional)
+        uses: actions/upload-artifact@v3
+        with:
+          name: bench-output
+          path: bench.out
+
+      - name: 🔍 Run benchzribe to update README
         run: |
           go mod tidy
           go run cmd/benchzribe/main.go run
 
-      - name: Commit benchmark results (only if not a fork)
-        if: github.event.pull_request.head.repo.full_name == github.repository
+      - name: 📄 Force add README (always update)
         run: |
           git config user.name "benchzribe-bot"
           git config user.email "bot@benchzribe.io"
-          git add README.md bench/ || echo "nothing to add"
-          git commit -m "📈 auto-update benchmark" || echo "no changes to commit"
+          git add -f README.md bench/
+          git commit -m "📈 force update: latest benchmark results" || echo "no changes to commit"
           git push || echo "nothing to push"
