--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,7 +6,6 @@ on:
       - main
     paths:
       - "**/*.go"
-      - "**/README.md"
       - ".github/workflows/bench.yml"
 
 jobs:
@@ -14,32 +13,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: ✅ Checkout code
         uses: actions/checkout@v3
         with:
           submodules: true
 
-      - name: Set up Go
+      - name: 🛠 Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
-      - name: Run mock API benchmark
+      - name: 🧪 Run Benchmark on Mock API
         run: |
           cd mockapi
           go test ./internal/benchmarks -bench=. -benchmem > ../bench.out
           cd ..
 
-      - name: Run benchzribe (parser + readme update)
+      - name: 🔍 Run benchzribe to update README
         run: |
           go mod tidy
           go run cmd/benchzribe/main.go run
 
-      - name: Commit benchmark results (only if not a fork)
+      # Optional: Debug output - uncomment to verify it worked
+      # - name: 🧾 Print README preview
+      #   run: cat README.md
+
+      # Optional: Upload bench.out for debug (skip if causes error)
+      # - name: 📦 Upload bench.out for inspection
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: bench-output
+      #     path: bench.out
+
+      - name: 📄 Force commit README changes
         if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
           git config user.name "benchzribe-bot"
           git config user.email "bot@benchzribe.io"
-          git add README.md bench/ || echo "nothing to add"
-          git commit -m "📈 auto-update benchmark" || echo "no changes to commit"
-          git push || echo "nothing to push"
+          git add -f README.md bench/ || echo "Nothing to add"
+          git commit -m "📈 auto-update benchmark from CI" || echo "No changes to commit"
+          git push || echo "Nothing to push"
