--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -7,16 +7,6 @@ on:
     paths:
       - "**/*.go"
       - ".github/workflows/bench.yml"
-  push:
-    branches:
-      - main
-    paths:
-      - "**/*.go"
-      - ".github/workflows/bench.yml"
-
-permissions:
-  contents: write
-  pull-requests: write
 
 jobs:
   benchzribe:
@@ -27,22 +17,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.head_ref || github.ref }}
 
       - name: 🛠 Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
-      - name: 🧪 Run Benchmark on Mock API
+      - name: 🧪 Run Benchmark
         run: |
           cd mockapi
           go test ./internal/benchmarks -bench=. -benchmem > ../bench.out
           cd ..
 
-      - name: 📦 Upload bench.out for debug
-        uses: actions/upload-artifact@v4
+      - name: 📦 Upload bench.out for debug (optional)
+        uses: actions/upload-artifact@v3
         with:
           name: bench-output
           path: bench.out
@@ -52,31 +40,10 @@ jobs:
           go mod tidy
           go run cmd/benchzribe/main.go run
 
-      - name: 📄 Update README with benchmark results
+      - name: 📄 Force add README (always update)
         run: |
           git config user.name "benchzribe-bot"
           git config user.email "bot@benchzribe.io"
-          git add README.md
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "📈 Update: Latest benchmark results"
-            if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-              git push origin HEAD:${{ github.head_ref }}
-            else
-              git push origin ${{ github.ref_name }}
-            fi
-          fi
-        continue-on-error: true
-
-      - name: 🔄 Create Pull Request Comment
-        if: failure() && github.event_name == 'pull_request'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '❌ Failed to update benchmark results in README. Please check the workflow logs for details.'
-            })
+          git add -f README.md bench/
+          git commit -m "📈 force update: latest benchmark results" || echo "no changes to commit"
+          git push || echo "nothing to push"
