--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,16 @@ name: CI
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+  pull-requests: read
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -16,6 +21,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
+        cache: true
 
     - name: Install dependencies
       run: |
@@ -23,20 +29,44 @@ jobs:
         go mod verify
 
     - name: Run tests
-      run: go test -v ./...
+      run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+
+    - name: Upload coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage
+        path: coverage.txt
 
     - name: Run linter
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
 
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        cache: true
+
     - name: Build
       run: go build -v ./cmd/benchzribe
 
+    - name: Upload binary
+      uses: actions/upload-artifact@v3
+      with:
+        name: benchzribe
+        path: benchzribe
+
   release:
-    needs: build
+    needs: [test, build]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
     - uses: actions/checkout@v3
@@ -45,6 +75,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
+        cache: true
 
     - name: Build binaries
       run: |
@@ -60,5 +91,6 @@ jobs:
           benchzribe-linux-amd64
           benchzribe-windows-amd64.exe
           benchzribe-darwin-amd64
+        generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
