feat: add benchmark-action configuration
- Add benchmark-action step to workflow

- Configure gh-pages branch for benchmark data

- Set up alert thresholds and notifications

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -47,6 +47,19 @@ jobs:
           name: bench-output
           path: bench.out
 
+      - name: 📊 Run Benchmark Action
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          tool: 'go'
+          output-file-path: './bench.out'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          auto-push: true
+          gh-pages-branch: 'gh-pages'
+          benchmark-data-dir-path: 'dev/bench'
+          alert-threshold: '200%'
+          fail-on-alert: true
+          alert-comment-cc-users: '@kitd3k'
+
       - name: 🔍 Run benchzribe to update README
         run: |
           go mod tidy
