--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -62,11 +62,11 @@ jobs:
 
       - name: Update README
         run: |
-          ./benchzribe run
+          ./benchzribe run --input bench.out
 
       - name: Generate graph
         run: |
-          ./benchzribe graph
+          ./benchzribe graph --input bench.out
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
