--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -42,6 +42,8 @@ jobs:
           cd mockapi
           go test ./internal/benchmarks -bench=. -benchmem > ../bench.out
           cd ..
+          echo "Generated benchmark results:"
+          cat bench.out
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
@@ -63,10 +65,14 @@ jobs:
       - name: Update README
         run: |
           ./benchzribe run
+          echo "README updated, checking changes:"
+          git status
 
       - name: Generate graph
         run: |
           ./benchzribe graph
+          echo "Graph generated, checking files:"
+          ls -la *.html *.out
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -77,7 +83,20 @@ jobs:
             benchmark-graph.html
           retention-days: 90
 
+      - name: Check for changes
+        id: verify-changed-files
+        run: |
+          if git diff --quiet; then
+            echo "No changes detected"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected:"
+            git diff --name-only
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Commit changes
+        if: steps.verify-changed-files.outputs.has_changes == 'true'
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: update benchmark results [skip ci]"
